# server/src/routes/weather.ts
@@ -5,13 +5,39 @@ import axios from "../axios";
 import config from "../config";
 import { ttlForWidgetType } from "../utils";
 
+interface WeatherCondition {
+  description: string;
+  icon:
+    | "01d"
+    | "02d"
+    | "03d"
+    | "04d"
+    | "09d"
+    | "10d"
+    | "11d"
+    | "13d"
+    | "50d"
+    | "01n"
+    | "02n"
+    | "03n"
+    | "04n"
+    | "09n"
+    | "10n"
+    | "11n"
+    | "13n"
+    | "50n";
+}
+
 interface WeatherData {
   current: {
     temperature: number;
+    condition: WeatherCondition;
   };
   forecast: Array<{
+    date: number;
     temperatureMin: number;
     temperatureMax: number;
+    condition: WeatherCondition;
   }>;
 }
 
@@ -30,7 +56,6 @@ export class WeatherController extends Controller {
     @Query() lon: string,
     @Query() unit: "imperial" | "metric"
   ): Promise<WeatherData> {
-    // TODO: allow passing a "location", or provide a separate endpoint for location resolution?
     const axiosResponse = await axios.get(
       "https://api.openweathermap.org/data/2.5/onecall",
       {
@@ -47,14 +72,16 @@ export class WeatherController extends Controller {
 
     const values = axiosResponse.data;
 
-    // TODO: pass through all other required parameters (e.g. weather conditions)
     return {
       current: {
         temperature: _.round(values.current.temp),
+        condition: values.current.weather?.[0],
       },
-      forecast: values.daily.map((daily: any) => ({
+      forecast: values.daily.splice(0, 5).map((daily: any) => ({
+        date: daily.dt,
         temperatureMin: _.round(daily.temp.min),
         temperatureMax: _.round(daily.temp.max),
+        condition: daily.weather?.[0],
       })),
     };
   }
